--- a/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -66,7 +66,7 @@
              </form>           
            </tab>
            <tab heading="Edit Photos ">             
-            <p>Photo edit will go here</p>            
+         <app-photo-editor [photos]="user.photos"></app-photo-editor>        
          </tab>   
         </tabset>
       </div>
