--- a/DatingApp-SPA/src/app/nav/nav.component.css
+++ b/DatingApp-SPA/src/app/nav/nav.component.css
@@ -1,3 +1,11 @@
 .dropdown-toggle, .dropdown-item{
     cursor: pointer;
 }
+
+img
+{
+    max-height: 40px;
+    border-radius: 20px ;
+    border: 2px solid white;
+    display: inline;
+}
