--- a/DatingApp-SPA/src/app/members/photo-editor/photo-editor.component.html
+++ b/DatingApp-SPA/src/app/members/photo-editor/photo-editor.component.html
@@ -7,7 +7,12 @@
                   [ngClass]="photo.isMain? 'btn-success active' : 'btn-secondary'"
                   [disabled] = "photo.isMain">Main
           </button>
-          <button type="button" class="btn btn-sm btn btn-danger"><i class="fa fa-trash-o"></i></button>
+          <button type="button" class="btn btn-sm btn btn-danger" 
+                   (click)=deletePhoto(photo.id)
+                   [disabled]="photo.isMain"
+                   ><i class="fa fa-trash-o"></i>
+                  
+          </button>
         </div>
   </div>
 </div>
