--- a/DatingApp-SPA/src/app/members/member-list/member-list.component.html
+++ b/DatingApp-SPA/src/app/members/member-list/member-list.component.html
@@ -1,6 +1,6 @@
-<div class="text-center mt-3">
+<!-- <div class="text-center mt-3">
   <h2>Your matches - {{pagination.totalItems}} found</h2>
-</div>
+</div> -->
 
 
 <div class="container mt-3">
@@ -68,7 +68,7 @@
   </div>
 </div>
 
-<div class="d-flex justify-content-center">
+<div class="d-flex justify-content-center mt-3">
  
   <pagination
             [boundaryLinks]="true"
