added : messaging component to the profile

--- a/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
@@ -51,7 +51,8 @@
                  
           </tab>
           <tab heading="Messages"> 
-            <h4>Messages</h4>            
+                <app-member-messages [recipientId]="user.id"></app-member-messages>
+
             </tab>
 
 
