--- a/DatingApp-SPA/src/app/messages/messages.component.html
+++ b/DatingApp-SPA/src/app/messages/messages.component.html
@@ -46,7 +46,7 @@
     </td>
     <td>{{message.messageSent | timeAgo}}</td>
     <td>
-      <button class="btn btn-danger">Delete</button>
+      <button class="btn btn-danger" (click)="deleteMessage($event, message.id)">Delete</button>
     </td>
   </tr>
 </table>
